0030484: Visualization - 2d persistent: order of detection doesn't coincide with order of objects creation

(cherry picked from commit a151681f49e3f365a76c0491bec127c72b594258)
(cherry picked from commit 555748a0d1583c1951fe4d85530c14a87edfdec8)